# bug-bounty-reports-hackerone

./: README.md  log.py  main.py  pyproject.toml  utils.py
models/: report.py
report/: report_classifier.py  report_fetcher.py  report_writer.py
results/based_on_asset_type/: apple.md  cidr.md  downloadable.md  google.md  hardware.md  other.md  source.md  url.md  wildcard.md
results/based_on_program/: 8x8.md  8x8_bounty.md  a.md  acronis.md  adobe.md  affirm.md  airbnb.md  aiven_ltd.md  algolia.md  alliance_of_american_football.md  alohi.md  apitest.md  arkadiyt_projects.md  aspen.md  automattic.md  avito.md  aws_vdp.md  azbuka_vkusa.md  basecamp.md  bcm_messenger.md  bime.md  bitaccess.md  bitwarden.md  blackrock.md  blockchain.md  blockdev_sp.md  blockfi.md  bohemia_interactive_a.md  bookfresh.md  brave_software.md  btfs.md  bumble.md  c2fo.md  central_security_project.md  cert.md  certly.md  cfp_time.md  chainlink.md  chaturbate.md  clario.md  (+272 more)
results/based_on_severity/: critical.md  high.md  low.md  medium.md  none.md
results/based_on_vulnerability_type/: allocation_of_resources_without_limits_or_throttling.md  array_index_underflow.md  authentication_bypass.md  authentication_bypass_by_primary_weakness.md  authentication_bypass_using_an_alternate_path_or_channel.md  blind_sql_injection.md  brute_force.md  buffer_over_read.md  buffer_under_read.md  buffer_underflow.md  business_logic_errors.md  cache_poisoning.md  classic_buffer_overflow.md  cleartext_storage_in_a_file_or_on_disk.md  cleartext_storage_of_sensitive_information.md  code_injection.md  (+167 more)
(+3 files in other folders)
